tests/baselines/reference/functionOverloads41.errors.txt
tests/cases/compiler/functionOverloads41.ts(4,9): error TS2763: No overload matches this call.
  Overload 1 of 2, '(bar: { a: number; }[]): string', gave the following error.
    Property 'a' is missing in type '{}' but required in type '{ a: number; }'.
  Overload 2 of 2, '(bar: { a: boolean; }[]): number', gave the following error.
    Property 'a' is missing in type '{}' but required in type '{ a: boolean; }'.


==== tests/cases/compiler/functionOverloads41.ts (1 errors) ====
    function foo(bar:{a:number;}[]):string;
    function foo(bar:{a:boolean;}[]):number;
    function foo(bar:{a:any;}[]):any{ return bar }
    var x = foo([{}]);
            ~~~~~~~~~
!!! error TS2763: No overload matches this call.
!!! error TS2763:   Overload 1 of 2, '(bar: { a: number; }[]): string', gave the following error.
!!! error TS2763:     Property 'a' is missing in type '{}' but required in type '{ a: number; }'.
!!! error TS2763:   Overload 2 of 2, '(bar: { a: boolean; }[]): number', gave the following error.
!!! error TS2763:     Property 'a' is missing in type '{}' but required in type '{ a: boolean; }'.
    